# meiso_glass

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/examples/: edge.generic.yaml  endpoint.generic.yaml  host.generic.yaml  sdc.generic.yaml
demo/: synthetic_main.c
docs/: README.md  composition.md  index.md  link.md  manual-origin.md  system.md  validation.md
docs/.vitepress/: config.mts  sidebar.mjs
docs/.vitepress/theme/: custom.css
docs/SDK/: README.md  index.md
docs/SDK/adapters/: HARDWARE_ADAPTER_API.md  (+1 more)
docs/adr/: 0003-udp-json-control-plane-v0.md  0005-chinese-docs-english-contracts.md
docs/api/: ai-native.md  spec.md
docs/architecture/: SDK_ARCHITECTURE.md
docs/benchmarks/: POWER_AND_LATENCY_LOGGING.md  POWER_BENCHMARK_GUIDE.md
docs/bible/: AGENT_RUNTIME_BIBLE.md  CONFIG_PROFILE_BIBLE.md  CONTROL_PLANE_BIBLE.md  DECOUPLING_BIBLE.md  REFERENCE_IMPLEMENTATION_BOUNDARY.md  SDK_BIBLE.md
docs/checklists/: ADAPTER_ACCEPTANCE_CHECKLIST.md  DECOUPLING_REVIEW_CHECKLIST.md  PLATFORM_ACCEPTANCE_CHECKLIST.md  PROTOCOL_CHANGE_CHECKLIST.md  RELEASE_READINESS_CHECKLIST.md
docs/ci-cd/: README.md  index.md  pipeline.md
docs/decisions/: 0001-core-wire-transport.md  0002-remove-ai-native-interface.md  0003-language-layering.md  0004-state-machine-boundaries.md  0005-core-wire-restructure.md  index.md
docs/development/: environment.md  hardware-validation.md  local-smoke-tests.md
docs/guide/: architecture-map.md  diagram-rendering.md  introduction.md  maintenance-loop.md
docs/guides/: COMPATIBILITY_CHECKLIST.md  PLATFORM_PORTING_GUIDE.md
docs/origin/: README.md  dev_hardware_sketch.md  endpoint_peripheral_validation_board.md
docs/project/: SDK_DOCUMENTATION_AND_MAINTENANCE_REVIEW.md
docs/protocol/: MESSAGE_PROTOCOL.md  TELEMETRY_PACKET_FORMAT.md
docs/research/: REFERENCE_SOURCES.md
docs/rules/: CORE_BOUNDARY_RULES.md  LANGUAGE_AND_NAMING_RULES.md
docs/spec/: .localization-touch  README.md  ai-native.md  capability-profile.md  data-link.md  fault-model.md  host-edge-contract.md  index.md  object-protocol.md  protocol-migration-plan.md  protocol-test-plan.md  render-profile.md  runtime-planes.md  runtime-protocol.md  sdk-surface.md  security-policy.md  state-machines.md  time-model.md  transport-profile.md  wire-protocol.md  wire-test-vectors.md
docs/standards/: coding-standard.md  language-policy.md
docs/validation/: README.md
include/: meiso_slice.h
scripts/: check_docs_sidebar.mjs  docs_dev_ensure.sh  docs_dev_stop.sh  docs_dev_watch.sh  probe_system.sh  setup_linux_dev.sh  video_receiver.sh  video_testsrc_sender.sh
src/: meiso_slice.c
src/meiso_glass/: __init__.py  agents.py  ai.py  api.py  cli.py  config.py  features.py  health.py  host.py  hud.py  logging_utils.py  messages.py  protocol.py  render.py  scene.py  sensors.py  timebase.py
systemd/: meiso-edge.service  meiso-endpoint.service  meiso-host.service  meiso-sdc.service
tests/: test_adapters_and_simulation.py  test_ai_native_api_contract.py  test_api.py  test_architecture_fitness.py  test_config.py  test_config_and_cli.py  test_core_contracts.py  test_docs_governance.py  test_feature_request_lease_contract.py  test_forbidden_old_naming.py  test_meiso_protocol_contract.py  test_messages.py  test_render_and_frame_scheduler_contract.py  test_scene_hud_sensor_telemetry_api_contract.py  test_slice.c  test_telemetry_packet.py  test_video.py
(+47 files in other folders)
